# TrussSolver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: NoInSourceBuilds.cmake
cmake/Modules/: FindExprTk.cmake  FindExprtk.cmake
extlibs/exprtk/: exprtk.hpp
src/core/: CMakeLists.txt  container.h  coordinate.h  definitions.h  element.h  elements.cpp  elements.h  load.cpp  loads.cpp  loads.h  node.cpp  node.h  nodemap.cpp  nodemap.h  nodes.cpp  nodes.h  struss.h  vector.h
